--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/femelo/ovos-solver-plugin-hugchat-persona.git
+ovos-solver-plugin-hugchat-persona @ git+https://github.com/femelo/ovos-solver-plugin-hugchat-persona@main
 ovos-utils~=0.0, >=0.0.28
 ovos_workshop~=0.0, >=0.0.11
 ovos-plugin-manager~=0.0, >=0.0.26a9
